fixed the alignment issue and contact form label text color

--- a/main.css
+++ b/main.css
@@ -33,6 +33,7 @@ header {
     float: left;
     background-color: #2c2e3b;
     max-height: 20px;
+    visibility: hidden;
 
 }
 .logo img{
@@ -87,7 +88,11 @@ header {
     }
     
 }
-
+@media screen and (max-width: 750px){
+    .logo{
+        visibility: visible;
+    }
+}
 /* Styling for the NavBar ends ------------------------*/ 
 
 
@@ -115,14 +120,16 @@ input[type=text], input[type=email] {
 }
 
 .main-quote{
-    margin: 1em 4em 0 4em;
+    margin-top: 0.5em;
     font-weight: 600;
     font-size: 2em;
     line-height: 1.5em;
 }
 
 .sub-quote{
-    margin: 0.5em 8em 0 8em;
+    margin-top: 0.5em;
+    max-width: 80%;
+    margin: 0 auto;
     font-size: 1.2em;
     font-weight: 400;
     line-height: 2em;
@@ -136,13 +143,10 @@ input[type=text], input[type=email] {
         font-size: 1em;  
         margin: 0;
         margin-top: 1em;
-        margin-left: 2em;
     }
     .sub-quote{
         font-size: 0.9em;
         font-weight: 500;
-        margin: 0;
-        margin-left: 1em;
     }
     #home img{
         width: 60%;
@@ -207,9 +211,9 @@ input[type=text], input[type=email] {
     }
 }
 @media screen and (max-width: 750px){
-    #home, #about, #team, #clients{
+   /* #home, #about, #team, #clients{
         margin-left: .5em;
-    }
+    }*/
     .content-graphic img{
         display: none;
     }
@@ -239,7 +243,7 @@ input[type=text], input[type=email] {
 
 .content{
     display: inline-block;
-    margin: 0em 1.5em 3em 1.5em;
+    margin: 0em auto 3em auto;
 }
 
 .profile-photo{
@@ -382,6 +386,7 @@ label, input {
 
 label {
     margin-bottom: 30px;
+    color: white;
 }
 
 textarea{
